Fix NPM vunerable packages

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.1.5",
+        "@tiptap/pm": "^2.6.5",
+        "@tiptap/starter-kit": "^2.6.5",
+        "@tiptap/vue-3": "^2.6.5",
         "date-fns": "^3.6.0"
     }
 }
