--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@tiptap/pm": "^2.6.5",
         "@tiptap/starter-kit": "^2.6.5",
         "@tiptap/vue-3": "^2.6.5",
-        "date-fns": "^3.6.0"
+        "date-fns": "^3.6.0",
+        "tiptap-markdown": "^0.8.10"
     }
 }
