--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "algolia/scout-extended": "^3.0",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/jetstream": "^5.1",
+        "laravel/scout": "^10.11",
         "laravel/tinker": "^2.9",
         "tightenco/ziggy": "^2.0"
     },
